<resources>
    <string name="app_name">PresentGO</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="family">Family</string>
    <string name="friends">Friends</string>
    <string name="colleagues">Colleagues</string>
    <string name="beloved">Beloved</string>
    <string name="superiors">Superiors</string>
    <string name="the_man_i_hate">Person I hate</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="to_whom_is_the_gift">To whom is the gift?</string>
    <string name="choose_gender">Choose gender</string>
    <string name="what_budget">What budget?</string>
    <string name="choose_the_amount_you_want_to_spend">Choose the amount of money you want to spend</string>
    <string name="infinity">&#8734;</string>
    <string name="child">Child</string>
    <string name="teenager">Teenager</string>
    <string name="adult">Adult</string>
    <string name="elderly">Elderly</string>
    <string name="what_is_the_age">What is the age?</string>
    <string name="birthday">Birthday</string>
    <string name="anniversary">Anniversary</string>
    <string name="graduation">Graduation</string>
    <string name="holiday">Holiday</string>
    <string name="wedding">Wedding</string>
    <string name="just_because">Just because</string>
    <string name="what_occasion">What occasion?</string>
    <string name="choose_the_occasion_for_gift_giving">Choose the occasion for gift giving</string>
    <string name="tap_icon_to_choose_category">Tap icon to choose category</string>
    <string name="simply_decide_what_sex_of_person">Simply decide what sex of person</string>
    <string name="lucky_guy_has_an_age_for_sure">Lucky guy has an age for sure!</string>
    <string name="how_close_are_you">How close are you?</string>
    <string name="choose_person_status_in_your_life">Choose person status in your life</string>
    <string name="short_description">short description</string>
    <string name="choose_the_date_and_we_will_remind_you">Choose the date and we will remind you</string>
    <string name="afraid_to_forget">Afraid to forget?</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="skip_this">Skip this</string>
    <string name="title_and_message_of_event_in_calendar">Title and message of event in calendar</string>
    <string name="message_title">message title</string>
    <string name="done">Done</string>
    <string name="title_activity_gift">GiftActivity</string>
    <string name="settings">Settings</string>
    <string name="about_application">About application</string>
    <string name="contact_me">Leave feedback</string>
    <string name="button_back">Use this button to navigate back</string>
    <string name="button_skip">Use this button to skip current step</string>
    <string name="got_it_text">GOT IT</string>
    <string name="title_descr_etc">Title, hint for screen and settings</string>
    <string name="view_pager_hint">Simply tap the icon, which suits mostly</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="tutorial">Tutorial</string>
    <string name="show_tutorial">Show tutorial one more time on the next time application is running</string>
    <string name="animation_duration">Animation_duration</string>
    <string name="skip_animation">Skip animation between swipes</string>
    <string name="animation">Animation</string>
    <string name="apps_settings">Application\'s settings</string>
    <string name="add_event">Add a reminder</string>
    <string name="show_gift">Show Gift</string>
    <string name="licence">Licence</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="change_language">Change language</string>
    <string name="tap_icon_to_choose_language">Tap icon to choose language</string>
    <string name="change_lang_of_app">Change language of application</string>
    <string name="suggested_gift">Suggested gift is</string>
    <string name="rate_the_app">Rate this application</string>
    <string name="rate_and_give">Rate the app and give feedback</string>
    <string name="very_bad">Very Bad</string>
    <string name="bad">Not good</string>
    <string name="normal">Quite OK</string>
    <string name="very_good">Very Good</string>
    <string name="excelent">Excellent!!!</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="later">Later</string>
    <string name="great_app">Great Application! I love it!</string>
    <string name="application_feedback">PresentGo application feedback</string>
    <string name="i_left">I left</string>
    <string name="multiple_stars_rating">stars rating, because i think, that this</string>
    <string name="singe_star_rating">star rating, because i think, that this </string>
</resources>
