<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AfraidToForgetFragment">
    <TextView
        android:id="@+id/afraid_to_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/fifty_dp"
        android:text="@string/afraid_to_forget"
        android:textColor="@color/mostlyTextColor"
        android:textSize="@dimen/thirty_sp"
        android:textStyle="bold" />


<TextView
        android:id="@+id/afraid_to_forget_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/afraid_to_forget"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/five_dp"
        android:text="@string/title_and_message_of_event_in_calendar"
        android:textColor="@color/mostlyTextColor"
        android:textSize="@dimen/sixteen_sp"
        android:textStyle="italic" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/afraid_to_forget_hint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/seventy_five_dp">

        <EditText
            android:id="@+id/edit_text_title_real"
            android:layout_width="@dimen/two_hundred_dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/message_title"
            android:maxLines="1"
            android:maxLength="25"
            android:singleLine="true"
            android:textColor="@color/mostlyTextColor"
            android:textColorHint="@color/colorAccent"
            android:textSize="@dimen/sixteen_sp" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:id="@+id/textInputLayout">

        <EditText
            android:id="@+id/edit_text_description_real"
            android:layout_width="@dimen/two_hundred_dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/short_description"
            android:maxLines="2"
            android:maxLength="60"
            android:lines="2"
            android:singleLine="false"
            android:textColor="@color/mostlyTextColor"
            android:textColorHint="@color/colorAccent"
            android:textSize="@dimen/sixteen_sp" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/button_done_finally"
        android:layout_width="@dimen/one_hundred_dp"
        android:layout_height="@dimen/fifty_dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/afraid_to_forget_hint"
        android:layout_marginBottom="@dimen/thirty_dp"
        android:background="@drawable/button_done_background"
        android:text="@string/add_event"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/show_me_gift"
        android:layout_width="@dimen/one_hundred_dp"
        android:layout_height="@dimen/fifty_dp"
        android:layout_alignBaseline="@+id/button_done_finally"
        android:layout_alignBottom="@+id/button_done_finally"
        android:layout_alignEnd="@+id/afraid_to_forget"
        android:background="@drawable/button_show_me_background"
        android:text="@string/show_gift"
        android:textColor="@color/colorWhite" />
</RelativeLayout>