<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kosboss.gogift.fragments.AgeFragment">

    <TextView
        android:id="@+id/age_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/what_is_the_age"
        android:textColor="@color/mostlyTextColor"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/age_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/age_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/lucky_guy_has_an_age_for_sure"
        android:textColor="@color/mostlyTextColor"
        android:textSize="14sp"
        android:textStyle="italic" />


    <GridLayout
        android:layout_below="@id/age_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:columnCount="2"
        android:rowCount="2">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="20dp"
            app:cardBackgroundColor="@color/colorTransparent"
            app:cardElevation="0dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:src="@drawable/baby_girl"
                app:civ_circle_background_color="@color/colorYellowBackground"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:text="@string/child"
                android:textAlignment="center"
                android:textColor="@color/mostlyTextColor"
                android:textSize="16sp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            app:cardBackgroundColor="@color/colorTransparent"
            app:cardElevation="0dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:src="@drawable/teen_girl"
                app:civ_circle_background_color="@color/colorGreenBackground"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:text="@string/teenager"
                android:textAlignment="center"
                android:textColor="@color/mostlyTextColor"
                android:textSize="16sp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/colorTransparent"
            app:cardElevation="0dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                app:civ_circle_background_color="@color/colorBlueBackground"
                android:layout_marginBottom="5dp"
                android:src="@drawable/adult_woman" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:text="@string/adult"
                android:textAlignment="center"
                android:textColor="@color/mostlyTextColor"
                android:textSize="16sp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/colorTransparent"
            app:cardElevation="0dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                app:civ_circle_background_color="@color/colorPurpleBackground"
                android:layout_marginBottom="5dp"
                android:src="@drawable/grandmother" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:text="@string/elderly"
                android:textAlignment="center"
                android:textColor="@color/mostlyTextColor"
                android:textSize="16sp" />

        </android.support.v7.widget.CardView>


    </GridLayout>


</RelativeLayout>
