<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparent"
    tools:context="com.kosboss.gogift.fragments.GenderFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/choose_gender"
        android:textStyle="bold"
        android:textColor="@color/mostlyTextColor"
        android:textSize="30sp"
        android:id="@+id/choose_gender"/>


    <TextView
        android:id="@+id/to_whom_gift_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/simply_decide_what_sex_of_person"
        android:textStyle="italic"
        android:textColor="@color/mostlyTextColor"
        android:layout_below="@+id/choose_gender"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/male_female">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="@color/colorTransparent"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/femenine" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="bottom"
                    android:text="@string/female"
                    android:textAlignment="center"
                    android:textColor="@color/mostlyTextColor"
                    android:textSize="16sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                app:cardBackgroundColor="@color/colorTransparent"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/masculine" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="bottom"
                    android:text="@string/male"
                    android:textAlignment="center"
                    android:textColor="@color/mostlyTextColor"
                    android:textSize="16sp"
                    android:paddingEnd="10dp"/>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
