<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kosboss.gogift.fragments.OccasionFragment">

    <TextView
        android:id="@+id/budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/what_occasion"
        android:textColor="@color/mostlyTextColor"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/occasion_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/budget"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/five_dp"
        android:text="@string/choose_the_occasion_for_gift_giving"
        android:textColor="@color/mostlyTextColor"
        android:textSize="14sp"
        android:textStyle="italic" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/occasion_hint"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/thirty_dp"
        android:columnCount="2"
        android:layout="@id/occasion_hint"
        android:rowCount="3">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/birthday_cv"
            android:layout_width="@dimen/one_hundred_dp"
            android:layout_height="@dimen/one_hundred_dp"
            android:layout_marginEnd="@dimen/twenty_dp"
            app:cardBackgroundColor="@color/colorTransparent"
            app:cardElevation="0dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/seventy_dp"
                android:layout_height="@dimen/seventy_dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/five_dp"
                android:src="@drawable/birthday" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/twenty_dp"
                android:layout_gravity="bottom"
                android:text="@string/birthday"
                android:textAlignment="center"
                android:textColor="@color/mostlyTextColor"
                android:textSize="16sp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/anniversary_cv"
            android:layout_width="@dimen/one_hundred_dp"
            android:layout_height="@dimen/one_hundred_dp"
            android:layout_marginStart="@dimen/twenty_dp"
            app:cardBackgroundColor="@color/colorTransparent"
            app:cardElevation="0dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/seventy_dp"
                android:layout_height="@dimen/seventy_dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/five_dp"
                android:src="@drawable/annirevsary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/twenty_dp"
                android:layout_gravity="bottom"
                android:text="@string/anniversary"
                android:textAlignment="center"
                android:textColor="@color/mostlyTextColor"
                android:textSize="16sp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/holiday_cv"
            android:layout_width="@dimen/one_hundred_dp"
            android:layout_height="@dimen/one_hundred_dp"
            android:layout_marginEnd="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            app:cardBackgroundColor="@color/colorTransparent"
            app:cardElevation="0dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/seventy_dp"
                android:layout_height="@dimen/seventy_dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/five_dp"
                android:src="@drawable/holiday" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/twenty_dp"
                android:layout_gravity="bottom"
                android:text="@string/holiday"
                android:textAlignment="center"
                android:textColor="@color/mostlyTextColor"
                android:textSize="16sp" />


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/graduation_cv"
            android:layout_width="@dimen/one_hundred_dp"
            android:layout_height="@dimen/one_hundred_dp"
            android:layout_marginStart="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            app:cardBackgroundColor="@color/colorTransparent"
            app:cardElevation="0dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/seventy_dp"
                android:layout_height="@dimen/seventy_dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/five_dp"
                android:src="@drawable/graduation"
                app:civ_circle_background_color="@android:color/secondary_text_light_nodisable" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/twenty_dp"
                android:layout_gravity="bottom"
                android:text="@string/graduation"
                android:textAlignment="center"
                android:textColor="@color/mostlyTextColor"
                android:textSize="16sp" />


        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/wedding_cv"
            android:layout_width="@dimen/one_hundred_dp"
            android:layout_height="@dimen/one_hundred_dp"
            android:layout_marginEnd="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            app:cardBackgroundColor="@color/colorTransparent"
            app:cardElevation="0dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/seventy_dp"
                android:layout_height="@dimen/seventy_dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/five_dp"
                android:src="@drawable/wedding" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/twenty_dp"
                android:layout_gravity="bottom"
                android:text="@string/wedding"
                android:textAlignment="center"
                android:textColor="@color/mostlyTextColor"
                android:textSize="16sp" />


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/just_because_cv"
            android:layout_width="@dimen/one_hundred_dp"
            android:layout_height="@dimen/one_hundred_dp"
            android:layout_marginStart="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            app:cardBackgroundColor="@color/colorTransparent"
            app:cardElevation="0dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/seventy_dp"
                android:layout_height="@dimen/seventy_dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/five_dp"
                android:src="@drawable/just_because"
                app:civ_circle_background_color="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/twenty_dp"
                android:layout_gravity="bottom"
                android:text="@string/just_because"
                android:textAlignment="center"
                android:textColor="@color/mostlyTextColor"
                android:textSize="16sp" />


        </android.support.v7.widget.CardView>


    </GridLayout>
</RelativeLayout>
