<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HowCloseFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/fifty_dp"
        android:text="@string/how_close_are_you"
        android:textStyle="bold"
        android:textColor="@color/mostlyTextColor"
        android:textSize="30sp"
        android:id="@+id/how_close_are_you"/>


    <TextView
        android:id="@+id/how_close_are_you_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/five_dp"
        android:text="@string/choose_person_status_in_your_life"
        android:textStyle="italic"
        android:textColor="@color/mostlyTextColor"
        android:layout_below="@+id/how_close_are_you"
        android:textSize="@dimen/sixteen_sp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/calendarImageView"
        android:layout_width="@dimen/two_hundred_dp"
        android:layout_height="@dimen/two_hundred_dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/fifty_dp"
        android:layout_marginBottom="@dimen/five_dp"
        android:layout_below="@id/how_close_are_you_hint"
        android:src="@drawable/how_close"
        android:layout_centerHorizontal="true"/>

    <com.blacksmithdreamapps.presentgo.seekbar.howclose.IndicatorSeekBar
        android:id="@+id/myOwnSeekBar"
        android:layout_below="@+id/calendarImageView"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fifty_dp"
        app:isb_track_background_bar_color="@color/colorYellowDark"
        app:isb_progress="40"
        app:isb_max="100"
        app:isb_seek_bar_type="continuous_texts_ends"
        app:isb_tick_num="5"
        app:isb_min="0"
        app:isb_indicator_custom_top_content_layout="@layout/custom_top_seekbar_layout"
        app:isb_tick_type="oval" />

    <Button
        android:id="@+id/button_done_how_close"
        android:layout_width="@dimen/one_hundred_dp"
        android:layout_height="@dimen/fifty_dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/thirty_dp"
        android:background="@drawable/button_done_background"
        android:text="@string/done"
        android:textColor="@color/colorWhite" />


</RelativeLayout>
